--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -26,30 +26,21 @@
 	</properties>
 
 	<dependencies>
-		 <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-config-server</artifactId>
-        </dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-eureka</artifactId>
-        </dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
+		 <dependency>    
+        <groupId>org.springframework.boot</groupId>    
+        <artifactId>spring-boot-starter-test</artifactId>    
+    </dependency>    
+      
+    <!-- config -->  
+   <dependency>  
+        <groupId>org.springframework.cloud</groupId>  
+        <artifactId>spring-cloud-starter-config</artifactId>  
+    </dependency>  
+      
+    <dependency>  
+        <groupId>org.springframework.cloud</groupId>  
+        <artifactId>spring-cloud-config-server</artifactId>  
+    </dependency>  
 	</dependencies>
 
 	<dependencyManagement>
